--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,21 +19,14 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Enable mouse control (clickable windows, panes, resizable panes)
-# set -g mouse-select-window on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-
 # Enable mouse mode (tmux 2.1 and above)
 # set -g mouse on
 
 # Stop renaming windows automatically
-# set-option -g allow-rename off
-
+set-option -g allow-rename off
 
 ## Look and Feel ##
 # Allow more colors
-# set -g default-terminal "screen-256color"
 set -g default-terminal "tmux-256color"
 # tell tmux that outside terminal supports true color
 set -ga terminal-overrides ",xterm-256color*:Tc"
