--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,6 @@ set -g default-terminal "tmux-256color"
 # tell tmux that outside terminal supports true color
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
+# Enable powerline in tmux
+run-shell "powerline-daemon -q"
+source "/usr/share/powerline/bindings/tmux/powerline.conf"
