--- a/.gitconfig
+++ b/.gitconfig
@@ -17,4 +17,7 @@
 	type = cat-file -t
 	dump = cat-file -p
 [credential]
-	helper = cache --timeout=7200
+	helper = /usr/local/share/gcm-core/git-credential-manager-core
+	credentialStore = gpg
+[credential "https://dev.azure.com"]
+	useHttpPath = true
