Add logadog and freeze aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,8 @@
 	st = status
 	br = branch
 	hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+        logadog = log --all --decorate --oneline --graph
+        freeze = update-index --skip-worktree
 	type = cat-file -t
 	dump = cat-file -p
 [credential]
