--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,8 @@
 [credential]
 	helper = /usr/local/share/gcm-core/git-credential-manager-core
 	credentialStore = gpg
+[credential "https://codeberg.org"]
+	provider = generic
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 [init]
