--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -134,15 +134,15 @@ font:
     style: Bold
 
   # Italic font face
-  #italic:
-  # Font family
-  #
-  # If the italic family is not specified, it will fall back to the
-  # value specified for the normal font.
-  #family: monospace
-
-  # The `style` can be specified to pick a specific face.
-  #style: Italic
+  italic:
+    # Font family
+    #
+    # If the italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: 'Fira Code'
+  
+    # The `style` can be specified to pick a specific face.
+    style: Italic
 
   # Bold italic font face
   #bold_italic:
@@ -744,7 +744,8 @@ font:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
+  - { key: Backslash,   mods: Shift|Control,  action: CreateNewWindow }
 #- { key: Paste,                                       action: Paste          }
 #- { key: Copy,                                        action: Copy           }
 #- { key: L,         mods: Control,                    action: ClearLogNotice }
